@@ -1,0 +1,87 @@
+collections {
+   group {
+      name: "main";
+      parts {
+         part {
+            type: RECT;
+            name: background;
+            mouse_events: 0;
+            description {
+               color: 0 0 0 255;
+            }
+         }
+         part {
+            type: RECT;
+            name: "area/vertical";
+            mouse_events: 0;
+            description {
+               color: 255 0 0 255;
+               align: 0.5 0;
+               min: 20 30;
+               max: 20 -1;
+            }
+         }
+         part {
+            type: RECT;
+            name: "area/horizontal";
+            mouse_events: 0;
+            description {
+               color: 255 0 0 255;
+               align: 0 0.5;
+               min: 30 20;
+               max: -1 20;
+            }
+         }
+         part {
+            type: RECT;
+            name: "threshold/horizontal";
+            mouse_events: 0;
+            description {
+               color: 0 0 255 255;
+               rel1 {
+                  to: "drag/horizontal";
+                  offset: -13 -13;
+               }
+               rel2 {
+                  to: "drag/horizontal";
+                  offset: +12 +12;
+               }
+            }
+         }
+         part {
+            type: RECT;
+            name: "drag/horizontal";
+            mouse_events: 1;
+            dragable {
+               confine: "area/horizontal";
+               threshold: "threshold/horizontal";
+               x: 1 1 0;
+               y: 0 0 0;
+            }
+            description {
+               aspect: 1 1;
+               color: 0 255 0 255;
+               min: 20 20;
+               max: 20 20;
+            }
+         }
+         part {
+            type: RECT;
+            name: "drag/vertical";
+            mouse_events: 1;
+            dragable {
+               confine: "area/vertical";
+               threshold: "threshold/horizontal";
+               x: 0 0 0;
+               y: 1 1 0;
+            }
+            description {
+               aspect: 1 1;
+               color: 0 255 255 255;
+               min: 20 20;
+               max: 20 20;
+            }
+         }
+      }
+   }
+}
